[SPARK-48021][ML][BUILD] add `--add-modules=jdk.incubator.vector` to maven test args